# jupyterlab-credentialstore

./: .eslintignore  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  setup.py  tsconfig.json  tsconfig.tsbuildinfo
jupyter-config/nb-config/: credentialstore.json
jupyter-config/server-config/: credentialstore.json
jupyterlab_credentialstore/: __init__.py  credentialstore.py  handlers.py
jupyterlab_credentialstore/tests/: __init__.py  test_handlers.py
src/: CredentialsList.tsx  CredentialsPanel.tsx  CredentialsWidget.tsx  PasswordSelector.tsx  handler.ts  index.ts
src/ducks/: credentials.ts  rootselector.js  token.ts
ui-tests/: package.json
ui-tests/tests/: credentialstore.spec.ts
